第一版ui大致完成 到创建service

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -2,8 +2,7 @@
     <string name="app_name">ftpServer</string>
     <!-- Preferences -->
     <string name="port_title">Port</string>
-    <string name="manage_users_label">User List</string>
+    <string name="manage_users_title">User List</string>
     <string name="delete">delete</string>
     <string name="edit">edit</string>
-
 </resources>
